Fix for page being too wide in some cases for huge surveys

--- a/public/css/surveygizmo/surveys-huge-movie.css
+++ b/public/css/surveygizmo/surveys-huge-movie.css
@@ -8,7 +8,7 @@
 	width:945px;
 }
 .sg-question-set {
-	width: 942px;
+	width: 922px;
 }
 ul.sg-list-vertical li {
 	min-width: 290px;
